--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>hi.is.vidmot.veganifel/hi.is.vidmot.veganifel.HelloApplication</mainClass>
+                            <mainClass>hi.is.vidmot.veganifel/hi.is.vidmot.veganifel.MultipleViewsApp</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
